--- a/index.html
+++ b/index.html
@@ -4,25 +4,42 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <title>WebStudio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Header -->
-    <header>
-      <a href="./index.html" lang="en">WebStudio</a>
-      <nav>
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+    <header class="header">
+      <a href="./index.html" lang="en" class="link header-logo">WebStudio</a>
+      <nav class="header-navigation">
+        <ul class="list header-list">
+          <li class="header-item">
+            <a href="" class="link header-link">Студия</a>
+          </li>
+          <li class="header-item">
+            <a href="./portfolio.html" class="link header-link">Портфолио</a>
+          </li>
+          <li class="header-item">
+            <a href="" class="link header-link">Контакты</a>
+          </li>
         </ul>
       </nav>
-      <ul>
+      <ul class="list header-contact">
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="link header-mail"
+            >info@devstudio.com</a
+          >
         </li>
         <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="link header-tel"
+            >+38 096 111 11 11</a
+          >
         </li>
       </ul>
     </header>
@@ -35,8 +52,8 @@
       </section>
       <!-- Section 2 - Benefits -->
       <section>
-        <h2 hidden>Наши преимущества</h2>
-        <ul>
+        <h2 class="visually-hidden">Наши преимущества</h2>
+        <ul class="list">
           <li>
             <h3>Внимание к деталям</h3>
             <p>
@@ -70,7 +87,7 @@
       <!-- Section 3 - What are we doing -->
       <section>
         <h2>Чем мы занимаемся</h2>
-        <ul>
+        <ul class="list">
           <li>
             <a href="">
               <img
@@ -103,7 +120,7 @@
       <!-- Section 4 - Our team -->
       <section>
         <h2>Наша команда</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/our_team_img_1.jpg"
@@ -146,19 +163,22 @@
 
     <!-- Footer -->
     <footer>
-      <a href="./index.html" lang="en">WebStudio</a>
+      <a href="./index.html" lang="en" class="link">WebStudio</a>
       <address>
-        <ul>
+        <ul class="list">
           <li>
             <a
               href="https://goo.gl/maps/MbrSrdM2JUGR9XBEA"
               target="_blank"
               rel="noopener noreferrer"
+              class="link"
               >г. Киев, пр-т Леси Украинки, 26
             </a>
           </li>
-          <li><a href="mailto:info@example.com">info@example.com </a></li>
-          <li><a href="tel:+380991111111">38 099 111 11 11</a></li>
+          <li>
+            <a href="mailto:info@example.com" class="link">info@example.com </a>
+          </li>
+          <li><a href="tel:+380991111111" class="link">38 099 111 11 11</a></li>
         </ul>
       </address>
     </footer>
