--- a/index.html
+++ b/index.html
@@ -16,28 +16,30 @@
   <body>
     <!-- Header -->
     <header class="header">
-      <a href="./index.html" lang="en" class="link header-logo">WebStudio</a>
+      <a class="link header-logo" href="./index.html" lang="en"
+        >Web<span class="header-logo-part">Studio</span></a
+      >
       <nav class="header-navigation">
         <ul class="list header-list">
           <li class="header-item">
-            <a href="" class="link header-link">Студия</a>
+            <a class="link header-link" href="">Студия</a>
           </li>
           <li class="header-item">
-            <a href="./portfolio.html" class="link header-link">Портфолио</a>
+            <a class="link header-link" href="./portfolio.html">Портфолио</a>
           </li>
           <li class="header-item">
-            <a href="" class="link header-link">Контакты</a>
+            <a class="link header-link" href="">Контакты</a>
           </li>
         </ul>
       </nav>
       <ul class="list header-contact">
         <li>
-          <a href="mailto:info@devstudio.com" class="link header-mail"
+          <a class="link header-contact-item" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
         </li>
         <li>
-          <a href="tel:+380961111111" class="link header-tel"
+          <a class="link header-contact-item" href="tel:+380961111111"
             >+38 096 111 11 11</a
           >
         </li>
@@ -46,50 +48,50 @@
 
     <main>
       <!-- section 1 - Hero  -->
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+      <section class="hero">
+        <h1 class="hero-content">Эффективные решения для вашего бизнеса</h1>
+        <button type="button" class="hero-btn">Заказать услугу</button>
       </section>
       <!-- Section 2 - Benefits -->
-      <section>
+      <section class="benefits">
         <h2 class="visually-hidden">Наши преимущества</h2>
-        <ul class="list">
-          <li>
-            <h3>Внимание к деталям</h3>
-            <p>
+        <ul class="benefits-list list">
+          <li class="benefits-item">
+            <h3 class="benefits-title">Внимание к деталям</h3>
+            <p class="benefits-item-content">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
-          <li>
-            <h3>Пунктуальность</h3>
-            <p>
+          <li class="benefits-item">
+            <h3 class="benefits-title">Пунктуальность</h3>
+            <p class="benefits-item-content">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
-          <li>
-            <h3>Планирование</h3>
-            <p>
+          <li class="benefits-item">
+            <h3 class="benefits-title">Планирование</h3>
+            <p class="benefits-item-content">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
-          <li>
-            <h3>Современные технологии</h3>
-            <p>
+          <li class="benefits-item">
+            <h3 class="benefits-title">Современные технологии</h3>
+            <p class="benefits-item-content">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
           </li>
         </ul>
       </section>
-      <!-- Section 3 - What are we doing -->
-      <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul class="list">
-          <li>
-            <a href="">
+      <!-- Section 3 - Work - What are we doing -->
+      <section class="work">
+        <h2 class="work-title">Чем мы занимаемся</h2>
+        <ul class="work-list list">
+          <li class="work-item">
+            <a class="link" href="">
               <img
                 src="./images/about_work_img_1.jpg"
                 alt="Программист работает с блок-схемой"
@@ -97,8 +99,8 @@
               />
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="work-item">
+            <a class="link" href="">
               <img
                 src="./images/about_work_img_2.jpg"
                 alt="Программист работает над мобильным приложением"
@@ -106,8 +108,8 @@
               />
             </a>
           </li>
-          <li>
-            <a href="">
+          <li class="work-item">
+            <a class="link" href="">
               <img
                 src="./images/about_work_img_3.jpg"
                 alt="Дизайнер работает с палитрой цветов на планшете"
@@ -118,7 +120,7 @@
         </ul>
       </section>
       <!-- Section 4 - Our team -->
-      <section>
+      <section class="team">
         <h2>Наша команда</h2>
         <ul class="list">
           <li>
@@ -163,22 +165,24 @@
 
     <!-- Footer -->
     <footer>
-      <a href="./index.html" lang="en" class="link">WebStudio</a>
+      <a class="link" href="./index.html" lang="en"
+        >Web<span class="footer-logo-part">Studio</span></a
+      >
       <address>
         <ul class="list">
           <li>
             <a
+              class="link"
               href="https://goo.gl/maps/MbrSrdM2JUGR9XBEA"
               target="_blank"
               rel="noopener noreferrer"
-              class="link"
               >г. Киев, пр-т Леси Украинки, 26
             </a>
           </li>
           <li>
-            <a href="mailto:info@example.com" class="link">info@example.com </a>
+            <a class="link" href="mailto:info@example.com">info@example.com </a>
           </li>
-          <li><a href="tel:+380991111111" class="link">38 099 111 11 11</a></li>
+          <li><a class="link" href="tel:+380991111111">38 099 111 11 11</a></li>
         </ul>
       </address>
     </footer>
