--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <main>
       <!-- section 1 - Hero  -->
       <section class="hero">
-        <h1 class="hero-content">Эффективные решения для вашего бизнеса</h1>
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
         <button type="button" class="hero-btn">Заказать услугу</button>
       </section>
       <!-- Section 2 - Benefits -->
@@ -121,68 +121,74 @@
       </section>
       <!-- Section 4 - Our team -->
       <section class="team">
-        <h2>Наша команда</h2>
-        <ul class="list">
-          <li>
+        <h2 class="team-title">Наша команда</h2>
+        <ul class="list team-list">
+          <li class="team-item">
             <img
               src="./images/our_team_img_1.jpg"
               alt="Фотография Игоря Демьяненко"
               width="270"
             />
-            <h3>Игорь Демьяненко</h3>
-            <p lang="en">Product Designer</p>
+            <h3 class="team-item-title">Игорь Демьяненко</h3>
+            <p class="team-item-profession" lang="en">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/our_team_img_2.jpg"
               alt="Фотография Ольги Репиной"
               width="270"
             />
-            <h3>Ольга Репина</h3>
-            <p lang="en">Frontend Developer</p>
+            <h3 class="team-item-title">Ольга Репина</h3>
+            <p class="team-item-profession" lang="en">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/our_team_img_3.jpg"
               alt="Фотография Николая Тарасова"
               width="270"
             />
-            <h3>Николай Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <h3 class="team-item-title">Николай Тарасов</h3>
+            <p class="team-item-profession" lang="en">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/our_team_img_4.jpg"
               alt="Фотография Михаила Ермакова"
               width="270"
             />
-            <h3>Михаил Ермаков</h3>
-            <p lang="en">UI Designer</p>
+            <h3 class="team-item-title">Михаил Ермаков</h3>
+            <p class="team-item-profession" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
     <!-- Footer -->
-    <footer>
-      <a class="link" href="./index.html" lang="en"
+    <footer class="footer">
+      <a class="link footer-logo" href="./index.html" lang="en"
         >Web<span class="footer-logo-part">Studio</span></a
       >
-      <address>
-        <ul class="list">
-          <li>
+      <address class="footer-contact">
+        <ul class="list footer-list">
+          <li class="footer-list-item">
             <a
-              class="link"
+              class="link footer-list-address"
               href="https://goo.gl/maps/MbrSrdM2JUGR9XBEA"
               target="_blank"
               rel="noopener noreferrer"
               >г. Киев, пр-т Леси Украинки, 26
             </a>
           </li>
-          <li>
-            <a class="link" href="mailto:info@example.com">info@example.com </a>
+          <li class="footer-list-item">
+            <a class="link footer-list-mail" href="mailto:info@example.com"
+              >info@example.com
+            </a>
           </li>
-          <li><a class="link" href="tel:+380991111111">38 099 111 11 11</a></li>
+          <li class="footer-list-item">
+            <a class="link footer-list-tel" href="tel:+380991111111"
+              >38 099 111 11 11</a
+            >
+          </li>
         </ul>
       </address>
     </footer>
