--- a/portfolio.html
+++ b/portfolio.html
@@ -15,42 +15,198 @@
   </head>
   <body>
     <!-- Header -->
-    <header>
-      <a href="./index.html" lang="en">WebStudio</a>
-      <nav>
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+    <header class="header">
+      <a class="link header-logo" href="./index.html" lang="en"
+        >Web<span class="header-logo-part">Studio</span></a
+      >
+      <nav class="header-navigation">
+        <ul class="list header-list">
+          <li class="header-item">
+            <a class="link header-link" href="./index.html">Студия</a>
+          </li>
+          <li class="header-item">
+            <a class="link header-link" href="./portfolio.html">Портфолио</a>
+          </li>
+          <li class="header-item">
+            <a class="link header-link" href="">Контакты</a>
+          </li>
         </ul>
       </nav>
-      <ul>
+      <ul class="list header-contact">
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="link header-contact-item" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
         </li>
         <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="link header-contact-item" href="tel:+380961111111"
+            >+38 096 111 11 11</a
+          >
         </li>
       </ul>
     </header>
 
-    <main></main>
+    <main>
+      <!-- Section 1 - Portfolio list  -->
+      <h2 class="visually-hidden">Наши работы</h2>
+      <section class="portfolio">
+        <ul class="pf-type-list">
+          <li class="pf-type-item">
+            <button type="button" class="pf-type-btn">Все</button>
+          </li>
+          <li class="pf-type-item">
+            <button type="button" class="pf-type-btn">Веб-сайты</button>
+          </li>
+          <li class="pf-type-item">
+            <button type="button" class="pf-type-btn">Приложения</button>
+          </li>
+          <li class="pf-type-item">
+            <button type="button" class="pf-type-btn">Дизайн</button>
+          </li>
+          <li class="pf-type-item">
+            <button type="button" class="pf-type-btn">Маркетинг</button>
+          </li>
+        </ul>
+
+        <!-- Portfolio list of work  -->
+        <ul class="pf-list">
+          <li class="list pf-item-list">
+            <a class="link pf-item-link" href=""
+              ><img
+                src="./images/portfolio/portfolio-gallery-1.jpg"
+                alt="Изображение примера с портфолио"
+                width="370"
+              />
+              <h3 class="pf-item-title">Технокряк</h3>
+              <p class="pf-item-type">Веб-сайт</p>
+            </a>
+          </li>
+          <li class="list pf-item-list">
+            <a class="link pf-item-link" href=""
+              ><img
+                src="./images/portfolio/portfolio-gallery-2.jpg"
+                alt="Изображение примера с портфолио"
+                width="370"
+              />
+              <h3 class="pf-item-title">
+                Постер <span lang="en">New Orlean vs Golden Star</span>
+              </h3>
+              <p class="pf-item-type">Дизайн</p>
+            </a>
+          </li>
+          <li class="list pf-item-list">
+            <a class="link pf-item-link" href=""
+              ><img
+                src="./images/portfolio/portfolio-gallery-3.jpg"
+                alt="Изображение примера с портфолио"
+                width="370"
+              />
+              <h3 class="pf-item-title">
+                Ресторан <span lang="en">Seafood</span>
+              </h3>
+              <p class="pf-item-type">Приложение</p>
+            </a>
+          </li>
+          <li class="list pf-item-list">
+            <a class="link pf-item-link" href="">
+              <img
+                src="./images/portfolio/portfolio-gallery-4.jpg"
+                alt="Изображение примера с портфолио"
+                width="370"
+              />
+              <h3 class="pf-item-title">Проект <span lang="en">Prime</span></h3>
+              <p class="pf-item-type">Маркетинг</p>
+            </a>
+          </li>
+          <li class="list pf-item-list">
+            <a class="link pf-item-link" href="">
+              <img
+                src="./images/portfolio/portfolio-gallery-5.jpg"
+                alt="Изображение примера с портфолио"
+                width="370"
+              />
+              <h3 class="pf-item-title">Проект <span lang="en">Boxes</span></h3>
+              <p class="pf-item-type">Приложение</p>
+            </a>
+          </li>
+          <li class="list pf-item-list">
+            <a class="link pf-item-link" href=""
+              ><img
+                src="./images/portfolio/portfolio-gallery-6.jpg"
+                alt="Изображение примера с портфолио"
+                width="370"
+              />
+              <h3 class="pf-item-title" lang="en">
+                Inspiration has no Borders
+              </h3>
+              <p class="pf-item-type">Веб-сайт</p>
+            </a>
+          </li>
+          <li class="list pf-item-list">
+            <a class="link pf-item-link" href=""
+              ><img
+                src="./images/portfolio/portfolio-gallery-7.jpg"
+                alt="Изображение примера с портфолио"
+                width="370"
+              />
+              <h3 class="pf-item-title">
+                Издание <span lang="en">Limited Edition</span>
+              </h3>
+              <p class="pf-item-type">Дизайн</p>
+            </a>
+          </li>
+          <li class="list pf-item-list">
+            <a class="link pf-item-link" href=""
+              ><img
+                src="./images/portfolio/portfolio-gallery-8.jpg"
+                alt="Изображение примера с портфолио"
+                width="370"
+              />
+              <h3 class="pf-item-title">Проект <span lang="en">LAB</span></h3>
+              <p class="pf-item-type">Маркетинг</p>
+            </a>
+          </li>
+          <li class="list pf-item-list">
+            <a class="link pf-item-link" href=""
+              ><img
+                src="./images/portfolio/portfolio-gallery-9.jpg"
+                alt="Изображение примера с портфолио"
+                width="370"
+              />
+              <h3 class="pf-item-title" lang="en">Growing Business</h3>
+              <p class="pf-item-type">Приложение</p>
+            </a>
+          </li>
+        </ul>
+      </section>
+    </main>
 
     <!-- Footer -->
-    <footer>
-      <a href="./index.html" lang="en">WebStudio</a>
-      <address>
-        <ul>
-          <li>
+    <footer class="footer">
+      <a class="link footer-logo" href="./index.html" lang="en"
+        >Web<span class="footer-logo-part">Studio</span></a
+      >
+      <address class="footer-contact">
+        <ul class="list footer-list">
+          <li class="footer-list-item">
             <a
+              class="link footer-list-address"
               href="https://goo.gl/maps/MbrSrdM2JUGR9XBEA"
               target="_blank"
               rel="noopener noreferrer"
               >г. Киев, пр-т Леси Украинки, 26
             </a>
           </li>
-          <li><a href="mailto:info@example.com">info@example.com </a></li>
-          <li><a href="tel:+380991111111">38 099 111 11 11</a></li>
+          <li class="footer-list-item">
+            <a class="link footer-list-mail" href="mailto:info@example.com"
+              >info@example.com
+            </a>
+          </li>
+          <li class="footer-list-item">
+            <a class="link footer-list-tel" href="tel:+380991111111"
+              >38 099 111 11 11</a
+            >
+          </li>
         </ul>
       </address>
     </footer>
