--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <nav class="header-navigation">
         <ul class="list header-list">
           <li class="header-item">
-            <a class="link header-link" href="">Студия</a>
+            <a class="link header-link current" href="./index.html">Студия</a>
           </li>
           <li class="header-item">
             <a class="link header-link" href="./portfolio.html">Портфолио</a>
