--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,9 @@
             <a class="link header-link" href="./index.html">Студия</a>
           </li>
           <li class="header-item">
-            <a class="link header-link" href="./portfolio.html">Портфолио</a>
+            <a class="link header-link current" href="./portfolio.html"
+              >Портфолио</a
+            >
           </li>
           <li class="header-item">
             <a class="link header-link" href="">Контакты</a>
